syntax = "proto3";

package contract.dto;

option csharp_namespace = "Contract.DTO";

message TimerSettingsDto {
  string timerSettingsId = 1;
  int32 documentationSaveInterval = 2;
  int32 snapshotSaveInterval = 3;
}
